# TEC-Royale

./: README.md
Cliente/: CMakeLists.txt  algoritmo_genetico.c  algoritmo_genetico.h  client.c  client.h  queue.c  queue.h
Cliente/mypthreads/: DataStructures.c  DataStructures.h  MyMutexDataStructure.h  MyThread.h  RealTimeScheduler.c  RealTimeScheduler.h  RoundRobinScheduler.h
Tec-Royale/: CMakeLists.txt  GameServer.c  GameServer.h  ini.c  main.c  tec-royale
Tec-Royale/mypthreads/: LotteryScheduler.c  LotteryScheduler.h  MyMutexDataStructure.c  MyThread.c  MyThreadErrors.h  RoundRobinScheduler.c
